<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutCoordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ActivityPodcastEpisodes">

    <include
        layout="@layout/include_appbarlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/layoutContent"
        app:layout_constraintTop_toBottomOf="@+id/layoutAppBar">

        <TextView
            android:id="@+id/textPodcastTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="26sp"
            app:layout_constraintBottom_toTopOf="@+id/imagePodcast"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textEpisodeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imagePodcast" />

        <ImageView
            android:id="@+id/imagePodcast"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/podcast_image" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutContent"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="#83879E"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textCurrentPosition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.88" />

        <TextView
            android:id="@+id/textDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.88" />

        <ImageButton
            android:id="@+id/buttonFastForward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/control_fast_forward"
            app:layout_constraintBottom_toTopOf="@+id/textDuration"
            app:layout_constraintStart_toEndOf="@id/layoutButton"
            app:layout_constraintTop_toBottomOf="@+id/seekBar"
            app:srcCompat="?attr/ic_fast_forward" />

        <ImageButton
            android:id="@+id/buttonRewind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/control_rewind"
            app:layout_constraintBottom_toTopOf="@+id/textDuration"
            app:layout_constraintEnd_toStartOf="@id/layoutButton"
            app:layout_constraintTop_toBottomOf="@+id/seekBar"
            app:srcCompat="?attr/ic_fast_rewind" />

        <FrameLayout
            android:id="@+id/layoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/textDuration"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekBar">

            <ImageButton
                android:id="@+id/buttonResume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/control_play"
                app:srcCompat="?attr/ic_play" />

            <ImageButton
                android:id="@+id/buttonPause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/control_pause"
                android:visibility="gone"
                app:srcCompat="?attr/ic_pause" />
        </FrameLayout>

        <SeekBar
            android:id="@+id/seekBar"
            style="@android:style/Widget.Material.SeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
