<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutEpisodeRow"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="4dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/layoutButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textPodcastTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:maxLines="1"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/textDate"
            app:layout_constraintStart_toStartOf="@id/textEpisodeTitle"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textDate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:maxLines="1"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/textEpisodeTitle"
            app:layout_constraintEnd_toEndOf="@+id/textEpisodeTitle"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textEpisodeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:maxLines="2"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/progressBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textPodcastTitle" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textEpisodeTitle"
            app:layout_constraintStart_toStartOf="@+id/textEpisodeTitle"
            app:layout_constraintTop_toBottomOf="@+id/textEpisodeTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/layoutButton"
        android:layout_width="@dimen/episode_row_button_size"
        android:layout_height="@dimen/episode_row_button_size"

        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/layoutText"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/buttonResume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/control_play"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="?attr/ic_play" />

        <ImageButton
            android:id="@+id/buttonDownload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/control_download"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="?attr/ic_file_download" />

        <ImageButton
            android:id="@+id/buttonCancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:contentDescription="@string/control_cancel"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="?attr/ic_cancel" />

        <ImageButton
            android:id="@+id/buttonStartPlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:contentDescription="@string/control_play"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="?attr/ic_play" />

        <ImageButton
            android:id="@+id/buttonPause"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:contentDescription="@string/control_pause"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="?attr/ic_pause" />

    </FrameLayout>

    <TextView
        android:id="@+id/textDuration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:maxLines="1"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/layoutText"
        app:layout_constraintTop_toBottomOf="@id/layoutButton" />

</androidx.constraintlayout.widget.ConstraintLayout>