<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutCoordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ActivityPodcastEpisodes">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/layoutAppBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintBottom_toTopOf="@+id/layoutContent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            app:titleTextColor="@android:color/white"/>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toTopOf="@id/fragmentMediaPlayerBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutAppBar">

        <Button
            android:id="@+id/buttonItunes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_search_itunes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonTest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add test feed (doughboys)"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonItunes" />

        <Button
            android:id="@+id/buttonTest2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add test feed (played)"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonTest" />

        <Button
            android:id="@+id/buttonTest3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add test feed (handbook)"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonTest2" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textRawUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonTest3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textRawUrlEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/example_feed"
                tools:text="https://rss.art19.com/doughboys" />

            <Button
                android:id="@+id/buttonRawUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_add_podcast" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <fragment
        android:id="@+id/fragmentMediaPlayerBar"
        android:name="com.guille.poddy.fragments.FragmentMediaPlayerBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:layout_constraintTop_toBottomOf="@id/layoutEpisodeInfo"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>